--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "history": "^5.0.0",
     "isomorphic-fetch": "^3.0.0",
+    "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.0.0-beta.0",
+    "redux": "^4.2.0",
     "serialize-javascript": "^6.0.0"
   },
   "version": "1.0.0",
