--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "mini-css-extract-plugin": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "@fontsource/mulish": "^4.5.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
