--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "jwt": "^0.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.0.0-beta.0",
     "redux": "^4.2.0",
