--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt": "^0.2.0",
     "react": "18.1.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.0.0-beta.0",
