--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    "babel-plugin-react-scoped-css",
     "@babel/plugin-proposal-object-rest-spread",
     [
       "@babel/plugin-transform-runtime",
