--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "babel-plugin-react-scoped-css": "^1.1.1",
     "css-loader": "^5.2.6",
     "mini-css-extract-plugin": "^2.0.0",
+    "scoped-css-loader": "^1.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
