--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-plugin-react-scoped-css": "^1.1.1",
     "css-loader": "^5.2.6",
     "mini-css-extract-plugin": "^2.0.0",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
     "scoped-css-loader": "^1.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0",
