--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-react-scoped-css": "^1.1.1",
     "css-loader": "^5.2.6",
+    "eslint-config-prettier": "^8.5.0",
     "mini-css-extract-plugin": "^2.0.0",
+    "prettier": "^2.6.2",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "scoped-css-loader": "^1.0.0",
