--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.0.0-beta.0",
     "redux": "^4.2.0",
