--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
