--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "babel-plugin-react-scoped-css": "^1.1.1",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^5.2.6",
     "eslint-config-prettier": "^8.5.0",
     "mini-css-extract-plugin": "^2.0.0",
